--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,8 @@
   <string name="about_team">Team</string>
   <string name="about_tag_translator">Translator</string>
   <string name="about_tag_developer">Developer</string>
+  <string name="about_tag_promote">Promoter</string>
+  <string name="about_tag_designer">Designer</string>
   <string name="tooltip_settings">Settings</string>
   <string name="tooltip_terminal">Open terminal</string>
   <string name="tooltip_new_file">New File</string>
@@ -42,6 +44,10 @@
   <string name="vivek_phrase">Some people hurt you and act like you hurt them</string>
   <string name="art_phrase">Turning codes into life changing stories✨️</string>
   <string name="nex_phrase">An old fashioned guy among trendy</string>
+  <string name="omer_phrase">POPMods Owner</string> 
+  <string name="optim_phrase">AndroBusket Owner</string>
+  <string name="zg_phrase">A Material Designer</string>
+
 
 
   <string name="common_word_result">Result</string>
