--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -53,6 +53,9 @@
   <string name="editor_tab_desc">Usar modo de guias no Sparkles</string>
   <string name="editor_title">Formatação</string>
   <string name="editor_theme_title">Tema do Editor Sora</string>
+  <string name="permission_dialog_text">Conceder a todos os arquivos permissão de acesso para fazer o Sparkles IDE funcionar corretamente</string>
+  <string name="Grant">Conceder</string>
+  <string name="Deny">Negar</string>
 
   <!-- TEAM BIO -->
   <string name="syntaxspin_phrase">Um Amante de Material You e Desenvolvedor Android/Web</string>
